--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,3 @@
-h1{
-    color: blue;
-}
-
-h2{
-    color: blue;
-}
-
-a{
-    color: black;
-}
-
 #Regresar {
     display: block;
     width: 67px;
@@ -17,36 +5,16 @@ a{
     font-weight: 700;
     border-radius: 10%;
     padding: 10px 30px; 
-    background-color:aquamarine;
-    color: white;
+    background-color: #ffff31;
+    color: black;
     text-decoration: none;
 
 }
 
 #Regresar:hover {
     background-color: transparent;
-    border: 2px solid aquamarine;
-    color: aquamarine;
-    
-}
-
-#Regresar_M {
-    display: block;
-    width: 67px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 700;
-    border-radius: 10%;
-    padding: 10px 30px; 
-    background-color:aquamarine;
-    color: white;
-    text-decoration: none;
-
-}
-
-#Regresar_M:hover {
-    background-color: transparent;
-    border: 2px solid aquamarine;
-    color: aquamarine;
+    border: 2px solid #ffff31;
+    color: black;
     
 }
 
@@ -54,4 +22,52 @@ a{
     color: blue;
 }
 
+h1{
+    color: #1d3557;
+    text-align: center;
+}
+ul{
+    list-style-type: none;
+    background-color: transparent;
+    overflow: hidden;
+    margin: 0;
+    padding: 0;
+}
+li{
+    float: right;
+}
+li a{
+    display: block;
+    color: white;
+    text-align:center;
+    padding: 15px;
+    text-decoration: none;
+}
+li a:hover{
+    background-color: #1788ff;
+}
 
+@keyframes color {
+	0%   { background: #33CCCC; }
+	20%  { background: #33CC36; }
+	40%  { background: #B8CC33; }
+	60%  { background: #FCCA00; }
+	80%  { background: #33CC36; }
+	100% { background: #33CCCC; }
+}
+
+body {
+  background: #33CCCC; /* Fallback */
+    animation: color 9s infinite linear;
+    text-align: center;
+    padding: 2em;
+}
+h1 {
+    text-align: center;
+    font-family: 'Kavoon', sans-serif;
+    font-size: 2.5em;
+    color: white;
+}
+h2{
+    
+}
